tests/expr/left_shift_right_operand_float/stderr.golden
error: right operand of left shift must be of type integer, current type float
bus.fbd +2:25
   |
 2 | 	C config; width = 1 << 3.4
   | 	                       ^^^
